feat(patient): add region tracking for accurate disease trend analytics